# EstrategiaDownOF

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  BADGES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FAQ.md  MANIFEST.in  Makefile  PLANO_SISTEMA_TRACKING.md  README.md  ROADMAP.md  SECURITY.md  analisecoderabbit.md  async_downloader.py  coderabbit.yaml  compress_videos.py  config.yaml.example  conftest.py  demo_ui.py  docker-compose.yml  download_database.py  logger.py  main.py  optimizerplan.md  performance_monitor.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  start.sh  test_async_downloader_comprehensive.py  test_compression.py  test_download_database.py  test_download_database_enhanced.py  (+5 more)
.agent/workflows/: performance-engineer.md
.archive/: codereviewer.md
.github/workflows/: release.yml  tests.yml
docs/: AGENTS.md  CHANGELOG.md  CLAUDE.md  TESTING.md  optimizerplan.md
scripts/: benchmark.py  compress.sh
src/estrategia_downloader/: __init__.py  async_downloader.py  download_database.py  main.py  ui.py
tests/: __init__.py  test_async_downloader_comprehensive.py  test_compression_enhanced.py  test_integration.py  test_main_comprehensive.py
