[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "estrategia-downloader"
version = "2.0.0"
description = "Downloader automático de cursos do Estratégia Concursos, otimizado para macOS"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Gabriel Ramos", email = "prof.ramos@example.com"}
]
keywords = ["downloader", "estrategia", "concursos", "async", "selenium"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Education",
]

dependencies = [
    "requests>=2.28.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "tqdm>=4.65.0",
    "colorama>=0.4.6",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "orjson>=3.9.0",
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "bandit>=1.7.5",
    "safety>=2.3.0",
    "types-requests",
    "types-colorama",
    "types-tqdm",
    "types-PyYAML",
]

[project.scripts]
estrategia-dl = "main:main"

[project.urls]
Homepage = "https://github.com/prof-ramos/EstrategiaDownOF"
Repository = "https://github.com/prof-ramos/EstrategiaDownOF"
Issues = "https://github.com/prof-ramos/EstrategiaDownOF/issues"
Changelog = "https://github.com/prof-ramos/EstrategiaDownOF/blob/main/CHANGELOG.md"

[tool.setuptools]
py-modules = [
    "main",
    "async_downloader",
    "compress_videos",
    "download_database",
    "ui",
    "logger",
    "demo_ui"
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [".", "tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "demo_ui.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # bandit
    "T",   # flake8-print
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "S101",   # use of assert (ok in tests)
    "S105",   # hardcoded password (false positives)
    "S106",   # hardcoded password (false positives)
    "S603",   # subprocess without shell=True
    "S607",   # start process with partial path
    "T201",   # print statement (we use print in CLI)
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "S106", "S105"]
"demo_ui.py" = ["T201"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "selenium.*",
    "tqdm.*",
    "colorama.*",
    "orjson.*",
    "uvloop.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101", "B601"]
